crates/weft-snapshots/tests/snapshots/html/corpus-settings.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-settings as html
---
<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Settings</title>
<style>
:root {
  --weft-space-xs: 4px;
  --weft-space-sm: 8px;
  --weft-space-md: 16px;
  --weft-space-lg: 24px;
  --weft-space-xl: 32px;
  --weft-radius-sm: 4px;
  --weft-radius-md: 8px;
  --weft-radius-pill: 999px;
  --weft-font-size-sm: 0.875rem;
  --weft-font-size-md: 1rem;
  --weft-font-size-lg: 1.25rem;
  --weft-font-size-xl: 1.75rem;
  --weft-color-white: #ffffff;
  --weft-color-ink: #1a1c21;
  --weft-color-blue-_root: #2563eb;
  --weft-color-red: #dc2626;
  --weft-color-action-primary: #2563eb;
  --weft-color-action-danger: #dc2626;
}
.weft-stack { display: flex; flex-direction: column; }
.weft-row { display: flex; flex-direction: row; }
.weft-grid { display: grid; }
[data-align="start"] { align-items: flex-start; }
[data-align="center"] { align-items: center; }
[data-align="end"] { align-items: flex-end; }
[data-align="stretch"] { align-items: stretch; }
[data-wrap] { flex-wrap: wrap; }
.weft-field label, .weft-toggle { display: flex; gap: 0.5em; }
.weft-field label { flex-direction: column; }
[hidden] { display: none !important; }
</style>
</head>
<body>
<main data-weft-id="settings" aria-label="Settings">
  <h1 data-weft-id="title">Settings</h1>
  <section data-weft-id="notifications" aria-label="Notifications">
    <h2 data-weft-id="notifications-title">Notifications</h2>
    <label class="weft-toggle">
      <input data-weft-id="email-alerts" type="checkbox" role="switch" data-bind="checked:$.emailAlerts">
      <span>Email alerts</span>
    </label>
    <label class="weft-toggle">
      <input data-weft-id="push-alerts" type="checkbox" role="switch" data-bind="checked:$.pushAlerts">
      <span>Push notifications</span>
    </label>
  </section>
  <section data-weft-id="appearance" aria-label="Appearance">
    <h2 data-weft-id="appearance-title">Appearance</h2>
    <label>
      <span>Language</span>
      <select data-weft-id="language" data-bind="value:$.language">
        <option data-weft-id="lang-en" value="en">English</option>
        <option data-weft-id="lang-de" value="de">Deutsch</option>
        <option data-weft-id="lang-fr" value="fr">Français</option>
      </select>
    </label>
    <label class="weft-toggle">
      <input data-weft-id="dark-mode" type="checkbox" role="switch" data-bind="checked:$.darkMode">
      <span>Dark mode</span>
    </label>
  </section>
  <button data-weft-id="save" type="button" data-variant="primary" data-bind="disabled:!$.dirty" data-action="press:settings.save">Save changes</button>
</main>
</body>
</html>
